VS2010 ThemeReader.cpp(758) : error C3861: 'round': identifier not found

XMLWordPrintable

    • b114
    • windows

        Compilation the java code with VS2010 gives the errors:
        jdk/src/java.desktop/windows/native/libawt/windows/ThemeReader.cpp(758) : error C3861: 'round': identifier not found
        jdk/src/java.desktop/windows/native/libawt/windows/ThemeReader.cpp(762) : error C3861: 'round': identifier not found

              Assignee:
              Alexandr Scherbatiy
              Reporter:
              Alexandr Scherbatiy
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: