8151998: VS2010 ThemeReader.cpp(758) : error C3861: 'round': identifier not found

Reviewed-by: serb, ssadetsky